@@ -1,3 +1,9 @@
+2010-10-04  Mark Grondona <mgrondona@llnl.gov>
+
+	* src/pdsh/mod.c :
+	  Fix reference of uninitialized modules, especially during
+	  options processing.
+
 2010-09-29  Mark Grondona <mgrondona@llnl.gov>
 
 	* config/ac_exec.m4 :
